--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,7 @@
       name="description"
       content="Web site"
     />
-    <title>React App</title>
+    <title>Soap It Up</title>
   </head>
   <body>
     <div id="root"></div>
